// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                Submit
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a submit button text of \`Go\` 1`] = `
<amplify-form-section submit-button-text="Go">
  <mock:shadow-root>
    <form>
      <amplify-section>
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" type="submit">
                Go
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render without Emotion CSS classes when style override is true 1`] = `
<amplify-form-section override-style="true">
  <mock:shadow-root>
    <form>
      <amplify-section overridestyle="">
        <div>
          <slot name="amplify-form-section-header">
            <div class="form-section-header">
              <h3 data-test="form-section-header-section"></h3>
            </div>
          </slot>
        </div>
        <slot></slot>
        <div>
          <slot name="amplify-form-section-footer">
            <div class="form-section-footer">
              <amplify-button data-test="form-section-form-section-button" overridestyle="" type="submit">
                Submit
              </amplify-button>
            </div>
          </slot>
        </div>
      </amplify-section>
    </form>
  </mock:shadow-root>
</amplify-form-section>
`;
